[ 4 ] - CSS padding fixes commit
- Now body is a flex itself.
- Main has a padding for information to not be overlap and has a flex-grow of 1 to allow main content to take up available space.
- Font sizes optimized.
- footer p is now absolute so it will not move from the footer itself.

--- a/index.css
+++ b/index.css
@@ -4,11 +4,14 @@ body {
 	color: #fff;
 	padding: 0;
 	margin: 0;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
 
 header, footer {
 	background: #000;
-	padding: 25px, 0, 25px, 0;
+	padding: 25px, 0;
 }
 
 header{
@@ -22,14 +25,16 @@ footer {
 	flex-direction: column;
 	flex-wrap: wrap;
 	margin-top: auto;
+	position: relative;
 }
 
 main {
 	display: flex;
 	flex-direction: column;
-	height: 70vh;
+	flex-grow: 1;
 	justify-content: center;
-	align-items: center; 
+	align-items: center;
+	padding: 10vh 2.5vh;
 }
 
 nav {
@@ -60,7 +65,7 @@ a:hover {
 h1 {
 	animation: bounce 5s infinite ease-in-out;
 	text-shadow: -40px -40px #000, 40px 40px #000;
-	font-size: 65px;
+	font-size: 64px;
 }
 
 section {
@@ -78,8 +83,12 @@ section {
 	margin-left: 10vh;
 }
 
+main p {
+	font-size: 24px;
+}
+
 footer p {
-	position: fixed;
+	position: absolute;
 	bottom: 0;
 	right: 2.5vh;
 }
